# lifeguard

./: .gitignore  README.md  package.json  tsconfig.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
