[package]
name = "lifeguard"
version = "0.1.0"
description = "A Tauri App"
authors = ["blank038"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lifeguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32.0"
toml = "0.8.19"
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "time"] }
